objects/SA_TABOVER__Tab_Override_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SA_TABOVER__Account_Default_View_Id__c</fullName>
        <label>Account Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Campaign_Default_View_Id__c</fullName>
        <label>Campaign Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Case_Default_View_Id__c</fullName>
        <label>Case Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Contact_Default_View_Id__c</fullName>
        <label>Contact Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Contract_Default_View_Id__c</fullName>
        <label>Contract Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Disable_Permission_Set_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disables the automatic assignment of permission sets during installations and push upgrades.</inlineHelpText>
        <label>Disable Permission Set Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Lead_Default_View_Id__c</fullName>
        <label>Lead Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_TABOVER__Opportunity_Default_View_Id__c</fullName>
        <label>Opportunity Default View Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Tab Override Settings</label>
</CustomObject>